<resources>
    <string name="app_name">Core2</string>
    <string name="madrid">Madrid</string>
    <string name="naples">Naples</string>
    <string name="valleta">Valletta</string>
    <string name="armenia">Armenia</string>
    <string name="ratingspa">5</string>
    <string name="ratingmal">4</string>
    <string name="ratingit">3.5</string>
    <string name="ratingcol">4.5</string>
    <string name="spain">Spain</string>
    <string name="italy">Italy</string>
    <string name="malta">Malta</string>
    <string name="colombia">Colombia</string>
    <string name="picture">Picture</string>
    <string name="error">Enter a date</string>
    <string name="title_activity_review">ReviewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="place">Place</string>
    <string name="country">Country</string>
    <string name="lastvisit">Last visit</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>



    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>