...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layoutDescription="@xml/location_main_scene">

    <ImageView
        android:id="@+id/currentimage"
        android:layout_width="match_parent"
        android:layout_height="482dp"
        android:layout_weight="1"
        android:contentDescription="@string/picture"
        app:srcCompat="@drawable/spain" />

...
