...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="25">

            <ImageView
                style="@style/city"
                android:id="@+id/spa"
                android:layout_width="208dp"
                android:layout_height="318dp"
                app:srcCompat="@drawable/spain" />

            <ImageView
                style="@style/beach"
...
